--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.5",
     "swig": "^1.4.2",
+    "twitter-node-client": "0.0.6",
     "validator": "^3.41.2"
   },
   "devDependencies": {
